# nmpde-matrix-free-solver

./: .gitignore  CMakeLists.txt  README.md
csv/: 16_homo_3D_mf.csv  16_homo_3D_mf_time.csv  16_non_homo_3D_mf.csv  16_non_homo_3D_mf_time.csv  1_homo_3D_mf.csv  1_homo_3D_mf_time.csv  1_non_homo_3D_mf.csv  1_non_homo_3D_mf_time.csv  20_homo_3D_mf.csv  20_homo_3D_mf_time.csv  20_non_homo_3D_mf.csv  20_non_homo_3D_mf_time.csv  4_homo_3D_mf.csv  4_homo_3D_mf_time.csv  4_non_homo_3D_mf.csv  4_non_homo_3D_mf_time.csv  8_homo_3D_mf.csv  8_homo_3D_mf_time.csv  8_non_homo_3D_mf.csv  8_non_homo_3D_mf_time.csv  homo_3D_mb.csv  homo_3D_mb_time.csv  homo_big_mf.csv  homo_big_mf_time.csv  homo_biggest_mf.csv  homo_biggest_mf_time.csv  homo_small_mf.csv  homo_small_mf_time.csv  non_homo_3D_mb.csv  non_homo_3D_mb_time.csv
docs/: Doxyfile  readme_docs.md
include/: adr_mb_problem.hpp  adr_operator.hpp  adr_problem.hpp  adr_problem_mb.hpp  advection_diffusion_problem.h  default_coefficient.hpp  general_definitions.hpp  matrix_based_operator.h  matrix_free_operator.h  prm_handler.hpp
input/2D/: homo_big.prm  homo_biggest.prm  homo_small.prm  nonhomo.prm
input/3D/: homo.prm  nonhomo.prm
input/params/: default_mf.prm  default_parameters.prm  default_parameters.xml  parameters.xml  parameters_g.xml  parameters_scala.xml  pb_1_params.prm  pb_2_params.prm  pb_3d_mb.prm  pb_3d_mf.prm  prm_template.xml  test_mb.prm  test_mf.prm
src/: adr_mb_problem.cpp  adr_operator.cpp  adr_prm_handler.cpp  adr_problem.cpp  advection_diffusion_problem.cpp  default_coefficient.cpp  main.cpp
tests/: CMakeLists.txt  matrix_based_adr.cpp  matrix_based_adr_class.cpp  matrix_based_adr_seq.cpp  matrix_free_adr.cpp  matrix_free_adr_3d.cpp  matrix_free_poisson.cpp  res.txt
